# server-document-image

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: garage.toml  init-garage.sh
src/: main.py
src/api/: __init__.py  config.py  models.py
src/api/routes/: __init__.py  render.py
src/core/: __init__.py  cache.py  document.py  optimizer.py
src/utils/: device.py  metrics.py
tests/: conftest.py
tests/api/: test_config.py  test_models.py
tests/api/routes/: test_render.py  test_render_e2e.py
tests/core/: test_cache.py  test_document.py  test_optimizer.py
tests/utils/: test_device.py
